<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/report_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/student_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/report_card_name"
            android:layout_marginStart="10dp"
            android:text="Marks: 356" />

        <TextView
            android:id="@+id/termName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/_2022_second_term"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/view_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/marks"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/view_report_card"
            android:textColor="@color/gold"
            android:textStyle="italic" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>